--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
         // Fetch live chart data and update the chart
         async function fetchLiveChartData() {
             try {
-                const response = await fetch('https://your-api-endpoint.com/getData'); // Replace with your actual API URL
+                const response = await fetch('https://web-api-mqnq.onrender.com/getData'); // Replace with your actual API URL
                 if (!response.ok) {
                     throw new Error('Network response was not ok ' + response.statusText);
                 }
